2012-07-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: VC1: mkvmerge will now only mark frames as I
	frames if a sequence header precedes them directly. Fixes #755.

2012-07-30  Moritz Bunkus  <moritz@bunkus.org>

	* all: new feature: Added a Basque translation by Xabier Aramendi
	(see AUTHORS).

2012-07-20  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: The programs do not try to create directories with
	empty names anymore. This happened if the output file name for
	e.g. mkvmerge or mkvextract was only a file name without a
	directory component. With Boost v1.50.0 the call to
	"boost::filesystem::create_directory()" would result in an error
	if the name was empty (it didn't in earlier versions of Boost).

2012-07-11  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed mmg not reading the very last line of
	mkvmerge's output. The result was that messages like "the cues are
	being written" did not show up in mmg and that the progress bar
	was not filled completely. Fixes #774.

2012-07-08  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.7.0.

	* mmg: bug fix: mmg will no longer print false warnings about a
	chapter UID not being unique. Fixes #760.

	* mkvmerge, mkvpropedit, mmg: bug fix: All tools can now deal with
	64bit UID values (chapter UIDs, edition UIDs etc).

	* mkvmerge: new feature: If "splitting by parts" is active and the
	last split part has a finite end point then mkvmerge will finish
	muxing after the last part has been completed. Implements #768.

2012-06-29  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The DTS and TrueHD packetizers were not
	flushed correctly. In some rare circumstances this could lead to
	mkvmerge aborting with an error message about the packet queue not
	being empty at the end of the muxing process. Fixes #772.

2012-06-17  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, mkvinfo's GUI, all .exes: enhancement: Added new icons by
	Ben Humpert based on the ones by Eduard Geier (see AUTHORS).