@@ -211,3 +211,4 @@ T_362xtr_avc:7e80cf1649489adf8f65a7dc8cef7387-ce680f3ae594f3842b638dcb2949e220:p
 T_363srt_colon_decimal_separator:b911ac82752b41c46e0a8e550f6df0a8:passed:20120520-180625:0.056713461
 T_364qtmp4_track_with_empty_chunkmap_table:525b2e6e666a21e66e31c2e8106e1817:passed:20120605-223925:0.081185075
 T_365qtmp4_constant_sample_size:adad6bd2e89cf83b4e3857427072b7df-10aaca3e180b5e2a2757c52a30d59d33:passed:20120605-230823:0.321147694
+T_366srt_with_space_in_timecode_arrow:81ad6ecc7cd81ba416c5bd670bb40dfd:passed:20120801-132204:0.143148427
