@@ -1,0 +1,6 @@
+#!/usr/bin/ruby -w
+
+# T_366srt_with_space_in_timecode_arrow
+describe "SRT files with spaces in the timecode line's arrow"
+
+test_identify "data/srt/space-in-arrow.srt"
