@@ -1,3 +1,8 @@
+2012-08-01  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: enhancement: SRT files can have spaces in their
+	timecode line's arrow (e.g. "-- >").
+
 2012-07-31  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: VC1: mkvmerge will now only mark frames as I
